# lms-ai-study-assistant

./: .gitignore  AGENTS.md  README.md  SPRINT_PLAN.md  task.md
backend/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  buf.gen.yaml  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 10ba27276f02_add_seat_assigned_at_to_users.py  38e60e429f76_standardize_forum_id_column_lengths_to_.py  3ca78cb96417_create_catalog_and_learning_tables.py  41f8bbf03622_add_track_d_identity_financial_aid_and_.py  4d186f683851_create_forum_tables.py  5b8f9e1029aa_add_track_b_assessment_tables.py  629bc7bbb558_create_forum_votes_table.py  685be7ef1e53_add_specialization_id_to_verified_.py  7a8f9e1029ab_create_course_reviews_table.py  92c325e689de_add_is_revoked_revoked_reason_to_.py  972357a021b8_add_enterprise_licenses_table.py  a7e8910b2c3d_add_is_identity_verified_to_users.py  dd8170ce953d_change_open_badges_json_ld_from_text_to_.py
backend/src/: main.py  seed.py
backend/tests/: conftest.py  test_access_policy.py  test_assessment.py  test_auth_interceptor.py  test_catalog_repository.py  test_catalog_review.py  test_catalog_usecase.py  test_certificate.py  test_certificate_repository.py  test_certificate_usecase.py  test_code_quality.py  test_config.py  test_database.py  test_identity.py  test_identity_repository.py  test_identity_usecase.py  test_instructor.py  test_integration.py  test_learning_repository.py  test_learning_usecase.py  test_s3_storage.py  test_shared.py  test_track_a_repositories.py
(+159 files in other folders)
